--- a/Nivantis/Nivantis.Android/Nivantis.Android.csproj
+++ b/Nivantis/Nivantis.Android/Nivantis.Android.csproj
@@ -70,6 +70,7 @@
     <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="27.0.2.1" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\ToastAndroid.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Renderers\LoginButtonRenderer.cs" />
     <Compile Include="Renderers\LoginEntryRenderer.cs" />
