--- a/Nivantis/Nivantis.UWP/Nivantis.UWP.csproj
+++ b/Nivantis/Nivantis.UWP/Nivantis.UWP.csproj
@@ -119,6 +119,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controller\ToastUWP.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
