--- a/Nivantis/Nivantis.Android/Nivantis.Android.csproj
+++ b/Nivantis/Nivantis.Android/Nivantis.Android.csproj
@@ -62,18 +62,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.6.0.293080" />
-    <PackageReference Include="Xamarin.Android.Support.Design" Version="27.0.2.1" />
-    <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="27.0.2.1" />
-    <PackageReference Include="Xamarin.Android.Support.v4" Version="27.0.2.1" />
-    <PackageReference Include="Xamarin.Android.Support.v7.CardView" Version="27.0.2.1" />
-    <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="27.0.2.1" />
+    <PackageReference Include="Xamarin.Forms" Version="3.6.0.344457" />
+    <PackageReference Include="Xamarin.Android.Support.Design" Version="28.0.0.1" />
+    <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="28.0.0.1" />
+    <PackageReference Include="Xamarin.Android.Support.v4" Version="28.0.0.1" />
+    <PackageReference Include="Xamarin.Android.Support.v7.CardView" Version="28.0.0.1" />
+    <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="28.0.0.1" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\ToastAndroid.cs" />
     <Compile Include="MainActivity.cs" />
-    <Compile Include="Renderers\LoginButtonRenderer.cs" />
-    <Compile Include="Renderers\LoginEntryRenderer.cs" />
+    <Compile Include="Renderers\Calculation\CalculationButtonRenderer.cs" />
+    <Compile Include="Renderers\Calculation\CalculationEntryRenderer.cs" />
+    <Compile Include="Renderers\Login\LoginButtonRenderer.cs" />
+    <Compile Include="Renderers\Login\LoginEntryRenderer.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
