--- a/Nivantis/Nivantis/Nivantis.csproj
+++ b/Nivantis/Nivantis/Nivantis.csproj
@@ -21,6 +21,9 @@
     <EmbeddedResource Update="Views\Calculation\CalculationPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\Form\FormPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\LoginPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
